<resources>
    <string name="app_name">BookManager</string>
    <string name="book_manager">Book Manager</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="already_read">Already Read</string>
    <string name="all_books">All Books</string>
    <string name="wishlist">Wishlist</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="developed_by_github_com_cantarinog">Developed by github.com/CantarinoG</string>
    <string name="app_icon">App Icon</string>
    <string name="author">Author:</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="pages">Pages:</string>
    <string name="placeholder">Loreim ipsum lorem ipsum</string>
</resources>