<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/baseline_menu_book_24"
        android:contentDescription="@string/app_icon"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextAppearance.AppCompat.Display2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_manager"
        app:layout_constraintBottom_toTopOf="@+id/btnAll"
        app:layout_constraintEnd_toEndOf="@+id/btnAll"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnAll"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnAll"
        style="@style/btnMainMenu"
        android:text="@string/all_books"
        app:layout_constraintBottom_toTopOf="@+id/btnCurrent"
        app:layout_constraintEnd_toEndOf="@+id/btnCurrent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnCurrent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btnCurrent"
        style="@style/btnMainMenu"
        android:text="@string/currently_reading"
        app:layout_constraintBottom_toTopOf="@+id/btnAlready"
        app:layout_constraintEnd_toEndOf="@+id/btnAlready"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnAlready"
        app:layout_constraintTop_toBottomOf="@+id/btnAll" />

    <Button
        android:id="@+id/btnAlready"
        style="@style/btnMainMenu"
        android:text="@string/already_read"
        app:layout_constraintBottom_toTopOf="@+id/btnWish"
        app:layout_constraintEnd_toEndOf="@+id/btnWish"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnWish"
        app:layout_constraintTop_toBottomOf="@+id/btnCurrent" />

    <Button
        android:id="@+id/btnWish"
        style="@style/btnMainMenu"
        android:text="@string/wishlist"
        app:layout_constraintBottom_toTopOf="@+id/btnFavorites"
        app:layout_constraintEnd_toEndOf="@+id/btnFavorites"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnFavorites"
        app:layout_constraintTop_toBottomOf="@+id/btnAlready" />

    <Button
        android:id="@+id/btnFavorites"
        style="@style/btnMainMenu"
        android:text="@string/favorites"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"
        app:layout_constraintEnd_toEndOf="@+id/btnAbout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnAbout"
        app:layout_constraintTop_toBottomOf="@+id/btnWish" />

    <Button
        android:id="@+id/btnAbout"
        style="@style/btnMainMenu"
        android:text="@string/about"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/btnFavorites" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by_github_com_cantarinog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAbout" />

</androidx.constraintlayout.widget.ConstraintLayout>